--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,22 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <h1> <%= kondOfDay %> </h1>
 
-    <ul>
-        <% for(var i = 0; i <newListItems.length; i++) { %>
-        <li> <%= newListItems[i]  %></li>
-        <% } %>
-    </ul>
+    <div id="heading" class="box">
+        <h1> <%= kondOfDay %> </h1>
+    </div>
 
-    <form action="/" method="post">
-        <input type="text" name="newItem">
-        <button type="submit">Add</button>
+    <div class="box">
+      
+            <% for(var i = 0; i <newListItems.length; i++) { %>
+                <div class="item">
+                    <input type="checkbox">
+                    <p><%= newListItems[i]  %></p>
+                </div>
+            <% } %>
+      
+            <form class="item" action="/" method="post">
+                <input type="text" name="newItem" placeholder="New Item" autocomplete="off" >
+                <button type="submit">+</button>
+            </form>
+    </div>
 
-    </form>
+   
+
+   
 </body>
 
 </html>
