--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,7 +11,7 @@
 <body>
 
     <div id="heading" class="box">
-        <h1> <%= kondOfDay %> </h1>
+        <h1> <%= listTitle %> </h1>
     </div>
 
     <div class="box">
@@ -25,7 +25,7 @@
       
             <form class="item" action="/" method="post">
                 <input type="text" name="newItem" placeholder="New Item" autocomplete="off" >
-                <button type="submit">+</button>
+                <button type="submit" name="list" value=<%= listTitle %> >+</button>
             </form>
     </div>
 
