--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
+<%- include("header") -%>
 
     <div id="heading" class="box">
         <h1> <%= listTitle %> </h1>
@@ -29,9 +19,5 @@
             </form>
     </div>
 
-   
+    <%- include("footer") -%>
 
-   
-</body>
-
-</html>
