--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,23 +1,22 @@
 <%- include("header") -%>
 
-    <div id="heading" class="box">
-        <h1> <%= listTitle %> </h1>
+<div id="heading" class="box">
+    <h1> <%= listTitle %> </h1>
+</div>
+
+<div class="box">
+
+    <% newListItems.forEach(function(item) { %>
+    <div class="item">
+        <input type="checkbox">
+        <p><%= item.name  %></p>
     </div>
+    <% }) %>
 
-    <div class="box">
-      
-            <% for(var i = 0; i <newListItems.length; i++) { %>
-                <div class="item">
-                    <input type="checkbox">
-                    <p><%= newListItems[i]  %></p>
-                </div>
-            <% } %>
-      
-            <form class="item" action="/" method="post">
-                <input type="text" name="newItem" placeholder="New Item" autocomplete="off" >
-                <button type="submit" name="list" value=<%= listTitle %> >+</button>
-            </form>
-    </div>
+    <form class="item" action="/" method="post">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+        <button type="submit" name="list" value=<%= listTitle %>>+</button>
+    </form>
+</div>
 
-    <%- include("footer") -%>
-
+<%- include("footer") -%>
